<resources>
    <string name="app_name">Tandero Mobile</string>

    <!--    -->
    <string name="tandero_mobile">Tandero Mobile</string>
    <string name="title_activity_base">ActivityBase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="close_session">Close Session</string>
    <string name="title_activity_a">a</string>
    <string name="select_image">Selecciona imagen</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="tanda_unique_key">Tanda unique key</string>

    <!--  App  -->
    <string name="app_blank_value">Blank value is not allowed.</string>
    <string name="app_invalid_form">Invalid fileds were detected, check the info</string>

    <!-- Activity Enroll   -->
    <string name="enroll_email_text">Email:</string>
    <string name="enroll_password_text">Password:</string>
    <string name="enroll_confirm_password_text">Confirm password:</string>
    <string name="enroll_register_text">Register</string>
    <string name="enroll_registration_failed">Registration failed… try again</string>
    <string name="enroll_values_do_not_match">Values ​​do not match</string>

    <!--  Activity login  -->
    <string name="login_mail_text">Email:</string>
    <string name="login_password_text">Password:</string>
    <string name="login_btn_text">Login</string>
    <string name="login_register_text">Register</string>
    <string name="login_blank_email">Blank email is not allowed.</string>
    <string name="login_blank_password">Blank password is not allowed.</string>
    <string name="login_failed">Login failed… try again</string>

    <!--  Sign out dialog  -->
    <string name="dialog_sign_out_title">Close session</string>
    <string name="dialog_sign_out_message">Are you sure you want to log out?</string>
    <string name="dialog_sign_out_postive">Accept</string>
    <string name="dialog_sign_out_negative">Cancel</string>

    <!-- Create Tanda dialog.    -->
    <string name="dialog_create_tanda_title">Register tanda</string>
    <string name="dialog_create_tanda_positive">Accept</string>
    <string name="dialog_create_tanda_negative">Cancel</string>

    <!-- Edit Tanda dialog.    -->
    <string name="dialog_edit_tanda_title">Edit tanda</string>
    <string name="dialog_edit_tanda_positive">Save changes</string>
    <string name="dialog_edit_tanda_negative">Cancel</string>

    <!-- Join Tanda dialog.    -->
    <string name="dialog_join_tanda_title">Join tanda</string>
    <string name="dialog_join_tanda_positive">Join</string>
    <string name="dialog_join_tanda_negative">Cancel</string>
    <string name="dialog_join_tanda_success">Successfully joined to the tanda.</string>
    <string name="dialog_join_tanda_fail">Unsuccessfully joined to the tanda, try again.</string>



    <!-- Error join Tanda dialog.    -->
    <string name="dialog_error_join_tanda_message">Something went wrong.</string>
    <string name="dialog_error_join_tanda_positive">Accept</string>

    <!-- Delete tanda dialog.    -->
    <string name="dialog_delete_tanda_title">Delete tanda</string>
    <string name="dialog_delete_tanda_text">Are you sure you want to delete</string>
    <string name="dialog_createTanda_nombretandahint">Nombre de la nueva tanda</string>
    <string name="dialog_createTanda_numeroParticipantesHint">Numero participantes</string>
    <string name="dialog_createTanda_frecuenciaPagoText">Frecuencia de pago:</string>
    <string name="dialog_createTanda_quincenal_text">Quincenal</string>
    <string name="dialog_createTanda_mensual_text">Mensual</string>
    <string name="dialog_createTanda_diasCobro">Dias de cobro (del mes)</string>
    <string name="dialog_createTanda_primerosMesText">1, 2 y 3</string>
    <string name="dialog_createTanda_mediados_text">15, 16 y 17</string>
    <string name="dialog_createTanda_monto_hint">Monto de aportacion</string>
    <string name="dialog_createTanda_fechaText">Fecha de inicio</string>
    <string name="dialog_createTanda_dia_hint">Dia</string>
    <string name="dialog_createTanda_mes_hint">Mes</string>
    <string name="dialog_createTanda_year_hint">Año</string>
    <string name="fragment_oganizer_tanda_tandaname">Tanda name</string>
    <string name="fragment_organizer_tanda_uniquekey">tandanamerjl</string>
    <string name="fragment_organizer_tanda_fecha_default_text">16-nov-2019</string>
    <string name="fragment_organizer_tanda_StartButton_text">Iniciar ahora!</string>
    <string name="fragment_organizer_tanda_participantes_text">Participantes:</string>
    <string name="fragment_organizer_buscarusuarios_buttonText">Buscar usuarios</string>
    <string name="item_usuario_ejemplo_tv">ejemplo@hotmail.com</string>
    <!--Activity cuenta-->
        <string name="seleccion_imagen">Selecciona imagen</string>
    <string name="olvidar_contra">¿Olvidaste tu contraseña?</string>


</resources>
