<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_createtanda_til_nombretanda"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_createTanda_nombretandahint"
        app:layout_constraintBottom_toTopOf="@id/dialog_createtanda_til_participantes"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_createtanda_nombretanda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- ************************************** -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_createtanda_til_participantes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_createTanda_numeroParticipantesHint"
        app:layout_constraintBottom_toTopOf="@id/dialog_createtanda_frecpago_textview"
        app:layout_constraintTop_toBottomOf="@id/dialog_createtanda_til_nombretanda"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_createtanda_participantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- ************************************** -->
    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/dialog_createtanda_frecpago_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_createTanda_frecuenciaPagoText"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/dialog_createtanda_frecPago_rg"
        app:layout_constraintTop_toBottomOf="@id/dialog_createtanda_til_participantes"
        />
    <!-- ************************************** -->
    <RadioGroup
        android:id="@+id/dialog_createtanda_frecPago_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/dialog_createtanda_diasCobro_textView"
        app:layout_constraintTop_toBottomOf="@id/dialog_createtanda_frecpago_textview"
        >
        <RadioButton
            android:id="@+id/dialog_createtanda_frecpago_quincenal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dialog_createTanda_quincenal_text"
            android:layout_marginEnd="20dp"
            />

        <RadioButton
            android:id="@+id/dialog_createtanda_frecpago_mensual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/dialog_createTanda_mensual_text"
            />

    </RadioGroup>
    <!-- ************************************** -->
    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/dialog_createtanda_diasCobro_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_createTanda_diasCobro"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/dialog_createtanda_diasCobro_rg"
        app:layout_constraintTop_toBottomOf="@id/dialog_createtanda_frecPago_rg"
        />
    <!-- ************************************** -->
    <RadioGroup
        android:id="@+id/dialog_createtanda_diasCobro_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/dialog_createtanda_til_aportacion"
        app:layout_constraintTop_toBottomOf="@id/dialog_createtanda_diasCobro_textView"
        >
        <RadioButton
            android:id="@+id/dialog_createtanda_diasCobro_primeros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dialog_createTanda_primerosMesText"
            android:layout_marginEnd="20dp"
            />

        <RadioButton
            android:id="@+id/dialog_createtanda_diasCobro_mediados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/dialog_createTanda_mediados_text"
            />

    </RadioGroup>
    <!-- ************************************** -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_createtanda_til_aportacion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/dialog_createtanda_diasCobro_rg"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_createTanda_monto_hint"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_createtanda_montoaportacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- ************************************** -->
    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/dialog_createtanda_fechaInicio_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_createTanda_fechaText"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/dialog_createtanda_til_dia"
        app:layout_constraintTop_toBottomOf="@id/dialog_createtanda_til_aportacion"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_createtanda_til_dia"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/dialog_createtanda_fechaInicio_tv"
        android:layout_marginTop="20dp"
        android:layout_width="80dp"
        android:hint="@string/dialog_createTanda_dia_hint"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dialog_createtanda_til_mes"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_createtanda_dia_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_createtanda_til_mes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/dialog_createtanda_fechaInicio_tv"
        android:layout_marginTop="20dp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_createTanda_mes_hint"
        app:layout_constraintLeft_toRightOf="@id/dialog_createtanda_til_dia"
        app:layout_constraintRight_toLeftOf="@id/dialog_createtanda_til_año"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_createtanda_mes_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_createtanda_til_año"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/dialog_createtanda_fechaInicio_tv"
        android:layout_marginTop="20dp"
        android:layout_width="80dp"
        android:hint="@string/dialog_createTanda_year_hint"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/dialog_createtanda_til_mes"
        app:layout_constraintRight_toRightOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_createtanda_año_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>