<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".activities.enrollment.ActivityEnroll">

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enroll_email_text"
        app:layout_constraintBottom_toTopOf="@+id/user_email_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_email_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/pass_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_view"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/pass_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enroll_password_text"
        app:layout_constraintBottom_toTopOf="@+id/user_password_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email_value" />

    <EditText
        android:id="@+id/user_password_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirm_pass_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_text_view"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/confirm_pass_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enroll_confirm_password_text"
        app:layout_constraintBottom_toTopOf="@+id/user_password_confirm_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password_value" />

    <EditText
        android:id="@+id/user_password_confirm_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass_text_view"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enroll_register_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password_confirm_value" />

</androidx.constraintlayout.widget.ConstraintLayout>